fix zip code and footer spacing issues

--- a/components/footer/Footer.module.scss
+++ b/components/footer/Footer.module.scss
@@ -14,6 +14,7 @@
 
   h1 {
     font-size: 36px;
+    margin: 0;
   }
 
   p, a {
@@ -25,13 +26,15 @@
 
 .left, .middle, .right {
   flex: 1;
+  height: 314px;
+
 }
 
 .left {
-  margin: 60px 0px;
+  margin: 80px 0px;
   min-width: 226px;
 }
 
 .middle, .right {
-  margin: 60px;
+  margin: 80px;
 }
