--- a/components/form/body/row/Slider.module.scss
+++ b/components/form/body/row/Slider.module.scss
@@ -24,7 +24,7 @@
   appearance: none;
   width: 26px; /* Set a specific slider handle width */
   height: 26px; /* Slider handle height */
-  background: $gray-400; /* Green background */
+  background: $gray-500; /* Green background */
   cursor: pointer; /* Cursor on hover */
   border-radius: 13px;
 }
