--- a/components/form/header/ZipCodeInput.module.scss
+++ b/components/form/header/ZipCodeInput.module.scss
@@ -3,6 +3,8 @@
 .container {
   @extend %header-input-container;
   @extend %form-row-flex-child-right;
+  padding-top: 8px;
+  padding-top: 8px;
 
   label {
     font-size: 14px;
